Move enosys defs to kfi core.
This way each provider does not have to compile in the functions into their modules, they
instead just link to kfi core module.

Signed-off-by: pmmccorm <patrick.m.mccormick@intel.com>

--- a/kfi/Kbuild
+++ b/kfi/Kbuild
@@ -2,7 +2,7 @@ MOD=kfabric
 
 obj-m := $(MOD).o
 
-$(MOD)-y := main.o kfi.o common.o
+$(MOD)-y := main.o kfi.o common.o enosys.o
 
 ccflags-n += -DCONFIG_KFI_DEBUG=1
 ccflags-y += -I$(src)/../include
